--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Travel Companion App</string>
+    <string name="sounds_of_famu">Sounds of FAMU</string>
+    <string name="_00_00_00_00">00:00 / 00:00</string>
+    <string name="todo">TODO</string>
+    <string name="todo1">TODO</string>
 </resources>
